added watchlist home route with cards

--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link"
-               href="#">Watchlists</a>
+               href="/watchlists">Watchlists</a>
           </li>
         </ul>
       </div>
