added page for watchlist details

--- a/watchlists/templates/watchlists.html
+++ b/watchlists/templates/watchlists.html
@@ -26,5 +26,8 @@
         <p>You have not created any watchlists yet.</p>
       {% endif %}
     </div>
+    <div class="row justify-content-right mt-4 ml-4">
+      <button class="btn btn-primary">Create Watchlist</button>
+    </div>
   </div>
 {% endblock content %}
