--- a/watchlists/templates/watchlist_details.html
+++ b/watchlists/templates/watchlist_details.html
@@ -7,17 +7,27 @@
 {% block content %}
   <div class="container mt-4">
     <!--Watchlist Cards-->
-    <div class="row justify-content-right">
-      <p class="display-4">{{ watchlist.name }}</p>
+    <div class="row mb-3">
+      <div class="col-6">
+        <p class="display-4 mb-1">{{ watchlist.name }}</p>
+        <p class="text-secondary ml-1">{{ watchlist.description }}</p>
+      </div>
+      <div class="col-6 align-self-center text-right">
+        <button class="btn btn-danger mr-2">Delete</button>
+        <button class="btn btn-info">Edit</button>
+      </div>
     </div>
     <!--Add stock-->
     <div>
-      <form class="form-inline mb-3" action="">
-        <input type="text" placeholder="Symbol" class="form-control mr-3">
+      <form class="form-inline mb-3"
+            action="">
+        <input type="text"
+               placeholder="Symbol"
+               class="form-control mr-3">
         <button class="btn btn-primary px-4">Add</button>
       </form>
     </div>
-    {% if stocks|length == 0 %}
+    {% if not stocks %}
       <p class="mb-5">There are no stocks in the watchlist.</p>
     {% else %}
       <table class="table table-hover">
