--- a/trades/templates/trade_details.html
+++ b/trades/templates/trade_details.html
@@ -6,18 +6,6 @@
 
 {% block content %}
   <div class="container mt-3">
-    <!--Alert-->
-    <div role="alert"
-         class="alert alert-dismissible fade show"
-         id="alert"
-         style="display: none">
-      <button type="button"
-              class="close"
-              data-dismiss="alert"
-              aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
     <!--Trade Card-->
     <div class="card">
       <h5 class="card-header">{{ trade.stock.name }} ({{ trade.stock.symbol }})</h5>
@@ -79,6 +67,7 @@
             <a href="/trades/open"
                class="btn btn-primary">View Open Trades</a>
           </div>
+          <!--Close Trade Confirmation Modal-->
           {% include "close_trade_confirmation.html" %}
         </div>
       </div>
@@ -87,5 +76,6 @@
 {% endblock content %}
 
 {% block scripts %}
-  <script src="{{url_for('.static', filename='close_trade.js')}}"></script>
+  <script src="{{url_for('.static', filename='close_trade.js')}}"
+          type="module"></script>
 {% endblock scripts %}
