--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
               aria-controls="navbarSupportedContent"
               aria-expanded="false"
               aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon">Hello</span>
       </button>
       <div class="collapse navbar-collapse"
            id="navbarSupportedContent">
