--- a/watchlists/templates/watchlist_details.html
+++ b/watchlists/templates/watchlist_details.html
@@ -62,7 +62,7 @@
       <tbody class="watchlist-table">
         {% if stocks %}
           {% for stock in stocks %}
-            <tr data-stock-id={{ stock.id }}>
+            <tr data-stock-id={{ stock["id"] }} data-watchlist-id={{ watchlist.id }}>
               <td class="text-center">{{ stock["symbol"] }}</td>
               <td class="text-center">{{ stock["name"] }}</td>
               <td class="text-center">{{ stock["price"] }}</td>
@@ -70,7 +70,7 @@
                 <button class="btn btn-primary btn-sm">Trade</button>
               </td>
               <td class="text-center">
-                <button class="btn btn-danger btn-sm">Remove</button>
+                <button class="btn btn-danger btn-sm remove-stock-btn">Remove</button>
               </td>
             </tr>
           {% endfor %}
@@ -84,5 +84,7 @@
   <script src="{{url_for('.static', filename='delete_watchlist.js')}}"
           type="module"></script>
   <script src="{{url_for('.static', filename='add_stock.js')}}"
+          type="module"></script>
+  <script src="{{url_for('.static', filename='remove_stock.js')}}"
           type="module"></script>
 {% endblock scripts %}
