--- a/watchlists/templates/watchlist_details.html
+++ b/watchlists/templates/watchlist_details.html
@@ -40,11 +40,13 @@
     </div>
     <!--Watchlist Stock Table-->
     {% if not stocks %}
-      <p id="no-stock-text" class="mb-5">There are no stocks in the watchlist.</p>
+      <p id="no-stock-text"
+         class="mb-5">There are no stocks in the watchlist.</p>
       {% set table_show = "display: none;" %}
     {% endif %}
     <table id="stocks-table"
-           class="table table-hover" style="{{ table_show }}">
+           class="table table-hover"
+           style="{{ table_show }}">
       <thead>
         <tr>
           <th scope="col"
@@ -67,7 +69,7 @@
               <td class="text-center">{{ stock["name"] }}</td>
               <td class="text-center">{{ stock["price"] }}</td>
               <td class="text-center">
-                <button class="btn btn-primary btn-sm">Trade</button>
+                <button class="btn btn-primary btn-sm trade-btn">Trade</button>
               </td>
               <td class="text-center">
                 <button class="btn btn-danger btn-sm remove-stock-btn">Remove</button>
@@ -86,5 +88,7 @@
   <script src="{{url_for('.static', filename='add_stock.js')}}"
           type="module"></script>
   <script src="{{url_for('.static', filename='remove_stock.js')}}"
+          type="module"></script>
+  <script src="{{url_for('.static', filename='trade_stock.js')}}"
           type="module"></script>
 {% endblock scripts %}
