--- a/templates/base.html
+++ b/templates/base.html
@@ -37,22 +37,24 @@
       <div class="collapse navbar-collapse"
            id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link"
-               href="/users/{{ g.user.id }}">Dashboard<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link"
-               href="/trades/open">Open Trades</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link"
-               href="/trades/history">Trading History</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link"
-               href="/watchlists">Watchlists</a>
-          </li>
+          {% if g.user.id %}
+            <li class="nav-item active">
+              <a class="nav-link"
+                 href="/users/{{ g.user.id }}">Dashboard<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link"
+                 href="/trades/open">Open Trades</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link"
+                 href="/trades/history">Trading History</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link"
+                 href="/watchlists">Watchlists</a>
+            </li>
+          {% endif %}
         </ul>
       </div>
       <ul class="nav navbar-nav navbar-right">
