made some UI changes

--- a/trades/templates/new_trade.html
+++ b/trades/templates/new_trade.html
@@ -5,8 +5,9 @@
 {% endblock title %}
 
 {% block content %}
-  <div class="container">
-    <h4>Enter New Trade</h4>
+  <div class="container col-6 mt-3">
+  
+    <h4 class="mb-3">New Trade</h4>
     <form id="new-trade-form">
       {{ form.hidden_tag() }}
       <div class="form-group">
