--- a/trades/templates/history.html
+++ b/trades/templates/history.html
@@ -8,32 +8,34 @@
   <div class="container mt-3">
     <!-- Closed Positions -->
     <div id="closed-positions">
-      <h5>Closed Positions</h5>
-      <table class="table"
-             id="closed-trades-table">
-        <thead>
-          <tr>
-            <th scope="col">ID</th>
-            <th scope="col">Timestamp</th>
-            <th scope="col"
-                class="text-center">Symbol</th>
-            <th scope="col"
-                class="text-center">Type</th>
-            <th scope="col"
-                class="text-center">Quantity</th>
-            <th scope="col"
-                class="text-center">Entry Price</th>
-            <th scope="col"
-                class="text-center">Exit Price</th>
-            <th scope="col"
-                class="text-center">Realized P/L</th>
-            <th scope="col"
-                class="text-center">Action</th>
-          </tr>
-        </thead>
-        <tbody id="tbody-closed-trades">
-          {% for trade in trades %}
-            {% if trade.status=="closed" %}
+      <h5 class="mb-3">Closed Positions</h5>
+      {% if trades|length == 0 %}
+        <p class="mb-5">There are no closed trades.</p>
+      {% else %}
+        <table class="table"
+               id="closed-trades-table">
+          <thead>
+            <tr>
+              <th scope="col">ID</th>
+              <th scope="col">Timestamp</th>
+              <th scope="col"
+                  class="text-center">Symbol</th>
+              <th scope="col"
+                  class="text-center">Type</th>
+              <th scope="col"
+                  class="text-center">Quantity</th>
+              <th scope="col"
+                  class="text-center">Entry Price</th>
+              <th scope="col"
+                  class="text-center">Exit Price</th>
+              <th scope="col"
+                  class="text-center">Realized P/L</th>
+              <th scope="col"
+                  class="text-center">Action</th>
+            </tr>
+          </thead>
+          <tbody id="tbody-closed-trades">
+            {% for trade in trades %}
               <tr>
                 <td>{{ trade.id }}</td>
                 <td>{{ trade.get_date("entry") }}</td>
@@ -48,10 +50,10 @@
                   </button>
                 </td>
               </tr>
-            {% endif %}
-          {% endfor %}
-        </tbody>
-      </table>
+            {% endfor %}
+          </tbody>
+        </table>
+      {% endif %}
     </div>
   </div>
 {% endblock content %}
