streamlined user views

--- a/users/templates/dashboard.html
+++ b/users/templates/dashboard.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% set user = dashboard.user %}
+{% set open_trades = dashboard.open_trades %}
+{% set closed_trades = dashboard.closed_trades %}
 
 {% block title %}
   Dashboard
@@ -85,28 +88,28 @@
           <tbody class="trades-table">
             {% for trade in open_trades %}
               <tr data-trade-id={{ trade.id }}>
-                  <td>{{ trade.id }}</td>
-                  <td>{{ trade.get_date("entry") }}</td>
-                  <td class="text-center">{{ trade.stock.symbol.upper() }}</td>
-                  <td class="text-center">
-                    {{ trade.trade_type }}
-                  </td>
-                  <td class="text-center">
-                    {{ trade.qty }}
-                  </td>
-                  <td class="text-center">
-                    {{ trade.entry_price }}
-                  </td>
-                  <td class="text-center">
-                    {{ trade.latest_price }}
-                  </td>
-                  <td class="text-center {{'text-success' if trade.get_pnl() > 0 else 'text-danger'}}">
-                    {{ trade.get_pnl() }}
-                  </td>
-                  <td class="text-center">
-                    <button id="trade-exit-btn" class="btn btn-info btn-sm" data-trade-id={{ trade.id }}>View
-                    </button>
-                  </td>
+                <td>{{ trade.id }}</td>
+                <td>{{ trade.get_date("entry") }}</td>
+                <td class="text-center">{{ trade.stock.symbol.upper() }}</td>
+                <td class="text-center">
+                  {{ trade.trade_type }}
+                </td>
+                <td class="text-center">
+                  {{ trade.qty }}
+                </td>
+                <td class="text-center">
+                  {{ trade.entry_price }}
+                </td>
+                <td class="text-center">
+                  {{ trade.latest_price }}
+                </td>
+                <td class="text-center {{'text-success' if trade.get_pnl() > 0 else 'text-danger' }}">
+                  {{ trade.get_pnl() }}
+                </td>
+                <td class="text-center">
+                  <button id="trade-exit-btn" class="btn btn-info btn-sm" data-trade-id={{ trade.id }}>View
+                  </button>
+                </td>
               </tr>
             {% endfor %}
           </tbody>
@@ -158,7 +161,9 @@
                 Realized P/L
               </th>
               <th scope="col"
-                  class="text-center">Action</th>
+                  class="text-center">
+                Action
+              </th>
             </tr>
           </thead>
           <tbody class="trades-table">
@@ -185,13 +190,13 @@
                 <td class="text-center">
                   {{ trade.latest_price }}
                 </td>
-                <td class="text-center {{'text-success' if trade.get_pnl() > 0 else 'text-danger'}}">
+                <td class="text-center {{'text-success' if trade.get_pnl() > 0 else 'text-danger' }}">
                   {{ trade.get_pnl() }}
                 </td>
                 <td class="text-center">
-                    <button id="trade-exit-btn" class="btn btn-info btn-sm" data-trade-id={{ trade.id }}>View
-                    </button>
-                  </td>
+                  <button id="trade-exit-btn" class="btn btn-info btn-sm" data-trade-id={{ trade.id }}>View
+                  </button>
+                </td>
               </tr>
             {% endfor %}
           </tbody>
