--- a/auth/templates/signup.html
+++ b/auth/templates/signup.html
@@ -6,7 +6,7 @@
 
 {% block content %}
   <div class="container col-3 mt-5">
-    <form method="POST">
+    <form method="POST" novalidate>
       {{ form.hidden_tag() }}
       {% for field in form if field.widget.input_type != "hidden" %}
         <div class="form-group">
