--- a/users/templates/change_password.html
+++ b/users/templates/change_password.html
@@ -8,12 +8,12 @@
 {% block content %}
   <div class="container col-3 mt-5">
     <form method="POST"
-          action="/users/{{ g.user.id }}/changepassword">
+          action="/users/{{ g.user.id }}/changepassword"
+          novalidate>
       {{ form.hidden_tag() }}
       {{ render_profile_field(form.current_password) }}
       {{ render_profile_field(form.new_password) }}
       {{ render_profile_field(form.new_password_retype) }}
-      
       <div class="form-group text-center">
         <button type="submit"
                 class="btn btn-primary btn-lg mt-3">Update</button>
