--- a/users/templates/profile.html
+++ b/users/templates/profile.html
@@ -8,7 +8,8 @@
 {% block content %}
   <div class="container col-3 mt-5">
     <form method="POST"
-          action="/users/{{ g.user.id }}/profile">
+          action="/users/{{ g.user.id }}/profile"
+          novalidate>
       {{ form.hidden_tag() }}
       {{ render_profile_field(form.username, true) }}
       {{ render_profile_field(form.first_name) }}
