--- a/trades/templates/trade_details.html
+++ b/trades/templates/trade_details.html
@@ -32,7 +32,7 @@
                 </tr>
               {% endif %}
               <tr>
-                <td>Quantity Price:</td>
+                <td>Quantity:</td>
                 <td>{{ trade.qty }}</td>
               </tr>
               <tr>
