changing links with leading slash to url_for - part 1

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
           content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/flatly/bootstrap.min.css">
+    <base href="{{ request.script_root}}/">
     <title>
 
       {% block title %}
