--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,9 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('trades.open_positions') }}"
+            <a
+              class="nav-link"
+              href="{{ url_for('trades.show_open_positions') }}"
               >Open Trades</a
             >
           </li>
